eplace usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList() and other minor cleanup